--- a/jade/index.jade
+++ b/jade/index.jade
@@ -27,6 +27,11 @@ block content
               span.date &hellip;
               span.age-container
           article
+              - if (c.key == "kevin")
+                p It has been a dream of mine to create a bot that could write code for me <em>(so I could delegate the boilerplate and focus on the creative parts of programming)</em>.
+                p Seeing Devin made me realize that my teenage dream is close to becoming reality. For personal satisfaction, I embarked on making my own open-source interface.
+                p The name comes from the legendary phreaker and my childhood hero <strong>Kevin Mitnick</strong> and is a play on Cognition Labs&rsquo; product name.
+
               - if (c.key == "webstiles")
                 p I made webstiles around the time when I first started working on client projects. Webstiles was born out of a need to have an easy to understand and easy to use way to share design prototyping ideas with clients.
                 p Webstiles soon became <a href="https://nmn.gl/blog/my-workflow-when-working-with-clients">a core part of my workflow</a>. My clients loved seeing multiple different Webstiles to choose from, and it also seemed to be well-received on social media.
