--- a/styl/main.styl
+++ b/styl/main.styl
@@ -365,6 +365,9 @@ creation-style(color)
   .creation__name a
     color color
 
+.kevin
+  creation-style #23c2bc
+
 .collisions
   creation-style #0ead15
 
