--- a/jade/index.jade
+++ b/jade/index.jade
@@ -27,6 +27,12 @@ block content
               span.date &hellip;
               span.age-container
           article
+              - if (c.key == "serenityai")
+                p Journaling has been proven to improve mood and reduce anxiety.
+                p And, "journaling" is more fun when done conversationally with a good listener.
+                p AI is the perfect companion for that.
+                p Serenity AI is your non-judgemental companion to reflect on your day and improve your mood.
+
               - if (c.key == "kevin")
                 p It has been a dream of mine to create a bot that could write code for me <em>(so I could delegate the boilerplate and focus on the creative parts of programming)</em>.
                 p Seeing Devin made me realize that my teenage dream is close to becoming reality. For personal satisfaction, I embarked on making my own open-source interface.
