--- a/styl/main.styl
+++ b/styl/main.styl
@@ -365,6 +365,9 @@ creation-style(color)
   .creation__name a
     color color
 
+.serenityai
+  creation-style #1c93e3
+
 .kevin
   creation-style #23c2bc
 
